# ezrequests

./: main.py  pyproject.toml
ezrequests/: __init__.py  printers.py
